tests/errors/first_stage/.string/expected_quotes/expected_quotes.am
myStr: .string a
myStr: .string b""
